--- a/example/config.json
+++ b/example/config.json
@@ -1,10 +1,10 @@
 {
     "log_level": "info",
-    "env": "pro",
+    "env": "dev",
     "dev": {
         "host": "0.0.0.0",
         "debug": true,
-        "log_level": "debug"
+        "log_level": "info"
     },
     "pro": {
         "host": "127.0.0.1",
