--- a/example/config.json
+++ b/example/config.json
@@ -1,10 +1,8 @@
 {
     "log_level": "info",
-    "env": "dev",
     "dev": {
         "host": "0.0.0.0",
-        "debug": true,
-        "log_level": "info"
+        "debug": true
     },
     "pro": {
         "host": "127.0.0.1",
