--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,7 +11,9 @@ edit_uri: ""
 nav:
     - 最初的开始: 'index.md'
     - 可用的配置: 'config.md'
-    - 响应Web请求: 'response.md'
+    - 处理 HTTP: 'view.md'
+    - HTTP 响应对象: 'response.md'
+    - 处理 Websocket: 'websocket.md'
 
 markdown_extensions:
   - markdown.extensions.codehilite:
