--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,13 +9,15 @@ repo_url: https://github.com/abersheeran/index.py
 edit_uri: ""
 
 nav:
-    - 最初的开始: 'index.md'
-    - 可用的配置: 'config.md'
-    - 处理 HTTP: 'view.md'
-    - HTTP 响应对象: 'response.md'
+  - 开始: 'index.md'
+  - 配置: 'config.md'
+  - HTTP:
+    - 请求 : 'view.md'
+    - 响应: 'response.md'
     - 中间件: 'middleware.md'
-    - 处理 Websocket: 'websocket.md'
-    - 事件钩子: 'event.md'
+  - Websocket: 'websocket.md'
+  - 事件: 'event.md'
+  - 命令: 'command.md'
 
 markdown_extensions:
   - markdown.extensions.codehilite:
