--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,7 @@ nav:
     - 中间件: 'middleware.md'
   - Websocket:
     - 处理: 'websocket.md'
+  - 挂载其他应用: 'mount.md'
   - 事件: 'event.md'
   - 命令: 'command.md'
 
