--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,17 +9,13 @@ repo_url: https://github.com/abersheeran/index.py
 edit_uri: ""
 
 nav:
-  - 开始: 'index.md'
-  - 配置: 'config.md'
-  - HTTP:
-    - 请求: 'http.md'
-    - 响应: 'response.md'
-    - 中间件: 'middleware.md'
-  - Websocket:
-    - 处理: 'websocket.md'
-  - 挂载其他应用: 'mount.md'
-  - 事件: 'event.md'
-  - 命令: 'command.md'
+  - Get Start: 'index.md'
+  - Configuration: 'config.md'
+  - HTTP: 'http.md'
+  - WebSocket: 'websocket.md'
+  - Mount: 'mount.md'
+  - Lifespan: 'event.md'
+  - Command: 'command.md'
 
 markdown_extensions:
   - markdown.extensions.codehilite:
