--- a/example/config.json
+++ b/example/config.json
@@ -18,6 +18,7 @@
     "pro": {
         "host": "127.0.0.1",
         "port": "41900",
-        "log_level": "warning"
+        "log_level": "warning",
+        "autoreload": false
     }
 }
