--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,7 @@ nav:
   - Mount: 'mount.md'
   - Lifespan: 'event.md'
   - Command: 'command.md'
+  - OpenAPI ᴮᴱᵀᴬ: 'openapi.md'
 
 markdown_extensions:
   - markdown.extensions.codehilite:
