--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
   - Configuration: 'config.md'
   - HTTP: 'http.md'
   - WebSocket: 'websocket.md'
+  - Test: 'test.md'
   - Mount: 'mount.md'
   - Lifespan: 'event.md'
   - Command: 'command.md'
