fix github action

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -23,5 +23,5 @@ jobs:
         pip install .
     - name: Test with pytest
       run: |
-        pip install pytest
+        pip install pytest pytest-asyncio
         pytest
