--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ packages = [
 index-cli = "index.cli:main"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.7"
 gunicorn = "^20.0.4"
 uvicorn = "^0.11.1"
 starlette = "^0.13.0"
@@ -31,6 +31,7 @@ watchdog = "^0.9.0"
 python-multipart = "^0.0.5"
 pyyaml = "^5.3"
 pydantic = "^1.3"
+contextvars = { version="^2.4", python= "~3.6" }
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.761"
