--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip poetry
+          poetry config virtualenvs.create false --local
           poetry install
       - name: Test with pytest
         run: |
@@ -40,6 +41,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip poetry
+          poetry config virtualenvs.create false --local
           poetry install
       - name: Test with pytest
         run: |
@@ -61,6 +63,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip poetry
+          poetry config virtualenvs.create false --local
           poetry install
       - name: Test with pytest
         run: |
