--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,24 +47,26 @@ jobs:
         run: |
           pytest
 
-  MacOS-Test:
-    runs-on: macos-latest
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: [3.6, 3.7, 3.8]
+  # No time to test MacOS compatibility, temporary comments.
 
-    steps:
-      - uses: actions/checkout@v1
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v1
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip poetry
-          poetry config virtualenvs.create false --local
-          poetry install
-      - name: Test with pytest
-        run: |
-          pytest
+  # MacOS-Test:
+  #   runs-on: macos-latest
+  #   strategy:
+  #     max-parallel: 4
+  #     matrix:
+  #       python-version: [3.6, 3.7, 3.8]
+
+  #   steps:
+  #     - uses: actions/checkout@v1
+  #     - name: Set up Python ${{ matrix.python-version }}
+  #       uses: actions/setup-python@v1
+  #       with:
+  #         python-version: ${{ matrix.python-version }}
+  #     - name: Install dependencies
+  #       run: |
+  #         python -m pip install --upgrade pip poetry
+  #         poetry config virtualenvs.create false --local
+  #         poetry install
+  #     - name: Test with pytest
+  #       run: |
+  #         pytest
