--- a/example/index.yaml
+++ b/example/index.yaml
@@ -3,7 +3,7 @@ allowed_hosts: ["localhost"]
 cors_allow_origins: ["*"]
 cors_allow_methods: ["GET"]
 cors_allow_credentials: false
-
+port: 4191
 # use in development
 dev:
     "host": "localhost"
