--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ mkdocs = "^1.0.4"
 mkdocs-material = "^4.6.0"
 pytest = "^5.3.2"
 pytest-asyncio = "^0.10.0"
+coverage = "^5.0.3"
 django = "^3.0.2"
 
 [build-system]
