--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,11 +38,12 @@ contextvars = { version="^2.4", python= "~3.6" }
 mypy = "^0.761"
 pylint = "^2.4.4"
 black = "^19.10b0"
-mkdocs = "^1.0.4"
-mkdocs-material = "^4.6.0"
 pytest-asyncio = "^0.10.0"
 coverage = "^5.0.3"
 django = "^3.0.2"
+# only docs
+mkdocs = "*"
+mkdocs-material = "*"
 
 [build-system]
 requires = ["poetry>=0.12"]
