add find template test

--- a/example/index.yaml
+++ b/example/index.yaml
@@ -4,6 +4,7 @@ allowed_hosts: ["localhost"]
 cors_allow_origins: ["*"]
 cors_allow_methods: ["GET"]
 cors_allow_credentials: false
+templates: ["templates", "other_templates"]
 
 # use in development
 dev:
