--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ contextvars = { version="^2.4", python= "~3.6" }
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.761"
-pylint = "^2.4.4"
+flake8 = "^3.7.9"
 black = "^19.10b0"
 pytest-asyncio = "^0.10.0"
 coverage = "^5.0.3"
