--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip poetry
           poetry config virtualenvs.create false --local
-          poetry install
+          poetry install -E test
       - name: Test with pytest
         run: |
           pytest -o log_cli=true -o log_cli_level=DEBUG
@@ -40,7 +40,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip poetry
           poetry config virtualenvs.create false --local
-          poetry install
+          poetry install -E test
       - name: Test with pytest
         run: |
           pytest -o log_cli=true -o log_cli_level=DEBUG
@@ -61,7 +61,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip poetry
           poetry config virtualenvs.create false --local
-          poetry install
+          poetry install -E test
       - name: Test with pytest
         run: |
           pytest -o log_cli=true -o log_cli_level=DEBUG
