more type hint for openapi tags

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ pyyaml = "^5.3"
 pydantic = "^1.5"
 watchdog = "^0.10.2"
 contextvars = {version = "^2.4", python = "~3.6"}
+typing-extensions = {version = "^3.7.4", python = "<3.8"}
 requests = {version = "^2.23.0", optional = true}
 pytest = {version = "^5.4.2", optional = true}
 
