--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,6 @@ index-cli = "indexpy.cli:main"
 [tool.poetry.dependencies]
 python = "^3.6"
 starlette = "^0.13.1"
-gunicorn = {version = "^20.0.4", optional = true}
 uvicorn = "^0.11.3"
 a2wsgi = "^0.3.4"
 aiofiles = "^0.5.0"
@@ -33,6 +32,7 @@ pydantic = "^1.5"
 watchdog = "^0.10.2"
 contextvars = {version = "^2.4", python = "~3.6"}
 typing-extensions = {version = "^3.7.4", python = "<3.8"}
+gunicorn = {version = "^20.0.4", optional = true}
 requests = {version = "^2.23.0", optional = true}
 pytest = {version = "^5.4.2", optional = true}
 
@@ -41,7 +41,7 @@ gunicorn = ["gunicorn"]
 test = ["pytest", "requests"]
 
 [tool.poetry.dev-dependencies]
-mypy = "*"
+mypy = {version = "*", allow-prereleases = true}
 flake8 = "*"
 black = {version = "*", allow-prereleases = true}
 pytest = "^5.4.2"
