--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "index.py"
 version = "0.10.3"
 description = "An easy-to-use asynchronous web framework based on ASGI."
+readme = "README.md"
 authors = ["abersheeran <me@abersheeran.com>"]
 license = "Apache-2.0"
 homepage = "https://github.com/abersheeran/index.py"
