--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,8 +38,10 @@ requests = {version = "^2.23.0", optional = true}
 pytest = {version = "^5.4.2", optional = true}
 
 [tool.poetry.extras]
-gunicorn = ["gunicorn"]
-test = ["pytest", "requests"]
+gunicorn = ["gunicorn"]          # for 'index-cli gunicorn'
+requests = ["requests"]          # for `TestView`
+pytest = ["pytest"]              # for `index-cli test`
+test = ["pytest", "requests"]    # include all dependencies for test
 
 [tool.poetry.dev-dependencies]
 mypy = {version = "*", allow-prereleases = true}
