--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dephell
         run: |
           python -m pip install "pip<20"
-          python -m pip install --upgrade dephell
+          python -m pip install --upgrade dephell[full]
 
       - name: Build setup.py
         run: |
