--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -30,4 +30,4 @@ jobs:
       - name: Push new files back to master.
         uses: mikeal/publish-to-github-action@1.0.0
         env:
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
