--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -47,4 +47,4 @@ jobs:
           git commit -m "Automated publish: ${timestamp} ${GITHUB_SHA}" || exit 0
           git push publisher setup.py
         env:
-          GITHUB_TOKEN: ${secrets.GITHUB_TOKEN}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
