--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -1,7 +1,9 @@
 name: Build setup.py
 
 on:
-  push
+  push:
+    branches:
+      - master
 
 jobs:
   build-and-deploy:
@@ -45,6 +47,7 @@ jobs:
           git add -A
           timestamp=$(date -u)
           git commit -m "Automated publish: ${timestamp} ${GITHUB_SHA}" || exit 0
+          git pull --rebase publisher master
           git push publisher setup.py
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
