--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,8 +55,8 @@ pytest-asyncio = "^0.12"
 django = "^3.0.2"
 
 # only docs
-mkdocs = "*"
-mkdocs-material = "*"
+mkdocs = "^1.1.2"
+mkdocs-material = "^5.4.0"
 
 [tool.dephell.main]
 from = { format = "poetry", path = "pyproject.toml" }
