--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,8 +54,8 @@ pytest-asyncio = "^0.12"
 django = "^3.0.2"
 
 # only docs
-mkdocs = "^1.1.2"
-mkdocs-material = "^5.4.0"
+mkdocs = "*"
+mkdocs-material = "*"
 
 [tool.dephell.main]
 from = { format = "poetry", path = "pyproject.toml" }
