--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,30 +1,36 @@
 site_name: Index.py
 site_description: 一个基于 ASGI 协议的异步 Web 框架.
 
+repo_name: Index.py
+repo_url: https://github.com/abersheeran/index.py
+edit_uri: "https://github.com/abersheeran/index.py/tree/master/docs/"
+
+use_directory_urls: true
+
 theme:
   name: "material"
   language: "zh"
   feature:
     tabs: true
 
-repo_name: Index.py
-repo_url: https://github.com/abersheeran/index.py
-edit_uri: "https://github.com/abersheeran/index.py/tree/master/docs/"
-
 nav:
   - 介绍: "index.md"
   - 教程:
       - 第一步: "firststep/index.md"
-  - Config:
-      - 介绍: "config/index.md"
-      - 列表: "config/list.md"
+  - Route: route.md
   - Application: application.md
+  - Configuration:
+      - Introduction: "config/index.md"
+      - Built-in List: "config/list.md"
   - HTTP: "http.md"
   - WebSocket: "websocket.md"
   - Lifespan: "event.md"
+  - Middleware: "middleware.md"
   - Mount: "mount.md"
   - Command: "command.md"
   - OpenAPI: "openapi.md"
+  - 设计与原理:
+      - 异步与并发: "knowledge/concurrency.md"
 
 markdown_extensions:
   - markdown.extensions.codehilite:
