--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,10 +33,11 @@ pyyaml = "^5.3"
 requests = {version = "^2.24.0", optional = true}
 starlette = "^0.13.6"
 typing-extensions = {version = "^3.7.4", python = "<3.8"}
-uvicorn = "^0.11.3"
+uvicorn = {version = "^0.11.3", optional = true}
 
 [tool.poetry.extras]
-gunicorn = ["gunicorn"] # for 'index-cli gunicorn'
+full = ["uvicorn", "gunicorn", "requests"]
+serve = ["gunicorn", "uvicorn"] # for 'index-cli serve && index-cli gunicorn'
 test = ["requests"] # include all dependencies for test
 
 [tool.poetry.dev-dependencies]
