--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -3,10 +3,34 @@ name: Publish PyPi
 on:
   push:
     tags:
-    - '*'
+      - "*"
 
 jobs:
+  tests:
+    name: "Python ${{ matrix.python-version }} ${{ matrix.os }}"
+    runs-on: "${{ matrix.os }}"
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8]
+        os: [windows-latest, ubuntu-latest, macos-latest]
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip poetry
+          poetry config virtualenvs.create false --local
+          poetry install -E full
+      - name: Test with pytest
+        run: |
+          python script/test.py
+
   build-and-deploy:
+    needs: tests
     runs-on: ubuntu-latest
     strategy:
       matrix:
