--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip poetry
           poetry config virtualenvs.create false --local
-          poetry install -E test
+          poetry install -E full
       - name: Test with pytest
         run: |
           python script/test.py
