Update github actions

--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -13,7 +13,7 @@ jobs:
         python-version: [3.7]
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v1
@@ -57,6 +57,7 @@ jobs:
           remote_repo="https://${CODING_USERNAME}:${CODING_PASSWORD}@e.coding.net/${CODING_REPOSITORY}.git"
 
           git remote add coding "${remote_repo}"
+          git pull --all
           git show-ref # useful for debugging
           git branch --verbose
 
