--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -52,12 +52,20 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Push to mirror
+  push-to-mirror:
+    runs-on: ubuntu-latest
+    needs: build-and-deploy
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Pull all ref
+        run: git pull --all origin
+
+      - name: Push to Coding
         run: |
           remote_repo="https://${CODING_USERNAME}:${CODING_PASSWORD}@e.coding.net/${CODING_REPOSITORY}.git"
 
           git remote add coding "${remote_repo}"
-          git pull --all origin
           git show-ref # useful for debugging
           git branch --verbose
 
