--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -61,6 +61,7 @@ jobs:
           git init
           git remote add origin https://github.com/${GITHUB_REPOSITORY}.git
           git fetch --all
+          git show-ref # useful for debugging
 
       - name: Push to Coding
         run: |
