Add iterator method to RadixTree

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ index-cli = "indexpy.cli:main"
 python = "^3.6"
 
 a2wsgi = "^1.0.0"
-aiofiles = "^0.5.0"
+click = "^7.1.2"
 gunicorn = {version = "^20.0.4", optional = true}
 jinja2 = "^2.10.3"
 pydantic = "^1.6"
@@ -33,7 +33,7 @@ pyyaml = "^5.3"
 requests = {version = "^2.24.0", optional = true}
 starlette = "^0.13.6"
 typing-extensions = {version = "^3.7.4", python = "<3.8"}
-uvicorn = {version = "^0.11.3", optional = true}
+uvicorn = {version = "^0.12.1", optional = true}
 
 [tool.poetry.extras]
 full = ["uvicorn", "gunicorn", "requests"]
