--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,11 +25,11 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip mkdocs mkdocs-material
+          python -m pip install --upgrade pip mkdocs mkdocs-material mkdocs-version
 
       - name: Build
         run: |
-          mkdocs build
+          mkdocs-version build --minor --min-version=v0.10.0
           echo index-py.abersheeran.com > site/CNAME
 
       - name: Deploy
