--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,4 +1,4 @@
-name: Build setup.py
+name: OnPush
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  build-and-deploy:
+  build-setup:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -52,9 +52,39 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+  build-docs:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.7]
+
+    steps:
+      - uses: actions/checkout@v1
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip mkdocs mkdocs-material mkdocs-version
+
+      - name: Build
+        run: |
+          mkdocs-version build --minor --min-version=v0.10.0 --version-regex="v(?P<version>.*)"
+          echo index-py.abersheeran.com > site/CNAME
+
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@releases/v3
+        with:
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: site
+
   push-to-mirror:
     runs-on: ubuntu-latest
-    needs: build-and-deploy
+    needs: [build-setup, build-docs]
     steps:
       - name: Clone
         run: |
