--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,9 +4,17 @@ on:
   push:
     branches:
       - master
+    tags-ignore:
+      - "v*"
+    paths-ignore:
+      - "docs/**"
+      - "mkdocs.yml"
   pull_request:
     branches:
       - master
+    paths-ignore:
+      - "docs/**"
+      - "mkdocs.yml"
 
 jobs:
   tests:
