Change docs branch from gh-pages to docs

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -78,7 +78,7 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BRANCH: gh-pages
+          BRANCH: docs
           FOLDER: site
 
   push-to-mirror:
