--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,14 +24,14 @@ index-cli = "indexpy.cli:index_cli"
 python = "^3.6"
 
 click = "^7.1.2"
-gunicorn = {version = "^20.0.4", optional = true}
+gunicorn = {version = "*", optional = true}
 pydantic = "^1.6"
 python-multipart = "^0.0.5"
 pyyaml = "^5.3"
 requests = {version = "^2.24.0", optional = true}
 starlette = "^0.13.6"
 typing-extensions = {version = "^3.7.4", python = "<3.8"}
-uvicorn = {version = "^0.12.1", optional = true}
+uvicorn = {version = "*", optional = true}
 
 [tool.poetry.extras]
 full = ["uvicorn", "gunicorn", "requests"]
