--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -8,26 +8,21 @@ on:
 jobs:
   build-setup:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.7]
-
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v1
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.7
 
-      - name: Install dephell
+      - name: Install poetry2setup
         run: |
-          python -m pip install "pip<20"
-          python -m pip install --upgrade dephell[full]
+          python -m pip install poetry2setup
 
       - name: Build setup.py
         run: |
-          dephell deps convert
+          poetry2setup > setup.py
           rm -f pyproject.toml poetry.lock
 
       - name: Push setup.py to branch `setup.py`.
@@ -54,17 +49,13 @@ jobs:
 
   build-docs:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.7]
-
     steps:
       - uses: actions/checkout@v1
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v1
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.7
 
       - name: Install dependencies
         run: |
