--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,6 @@ python = "^3.7"
 click = "^7.1.2"
 gunicorn = {version = "*", optional = true}
 pydantic = "^1.6"
-python-multipart = "^0.0.5"
 requests = {version = "^2.24.0", optional = true}
 starlette = "^0.13.6"
 typing-extensions = {version = "^3.7.4", python = "<3.8"}
@@ -68,6 +67,7 @@ exclude_lines = [
   "assert False",
   "if typing.TYPE_CHECKING:",
   "if TYPE_CHECKING:",
+  "def __repr__",
 ]
 show_missing = true
 skip_covered = true
