--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,19 +23,18 @@ index-cli = "indexpy.cli:index_cli"
 [tool.poetry.dependencies]
 python = "^3.7"
 
-click = "^7.1.2"
+async-asgi-testclient = {version = "^1.4.6", optional = true}
+baize = {version = "^0.2.1", extras = ["multipart"]}
+click = {version = "^7.1.2", optional = true}
 gunicorn = {version = "*", optional = true}
-pydantic = "^1.6"
-python-multipart = "^0.0.5"
-requests = {version = "^2.24.0", optional = true}
-starlette = "^0.13.6"
-typing-extensions = {version = "^3.7.4", python = "<3.8"}
+pydantic = "^1.8"
 uvicorn = {version = "*", optional = true}
 
 [tool.poetry.extras]
-full = ["uvicorn", "gunicorn", "requests"]
-serve = ["gunicorn", "uvicorn"] # for 'index-cli serve && index-cli gunicorn'
-test = ["requests"] # include all dependencies for test
+cli = ["click"] # for index-cli commands
+full = ["gunicorn", "uvicorn", "async-asgi-testclient"]
+serve = ["gunicorn", "uvicorn", "click"] # for 'index-cli serve && index-cli gunicorn'
+test = ["async-asgi-testclient"] # for test asgi app
 
 [tool.poetry.dev-dependencies]
 flake8 = "*"
@@ -53,9 +52,8 @@ pytest-cov = "^2.8.1"
 mkdocs = "*"
 mkdocs-material = "*"
 
-[tool.dephell.main]
-from = {format = "poetry", path = "pyproject.toml"}
-to = {format = "setuppy", path = "setup.py"}
+[tool.isort]
+profile = "black"
 
 [tool.coverage.run]
 omit = ["*/.venv/*", "*/tests/*"]
